[IMP] update spring boot 2.4.1 & spring cloud 2020.0.0

--- a/scmp-cloud-stock-admin/pom.xml
+++ b/scmp-cloud-stock-admin/pom.xml
@@ -74,8 +74,8 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-boot-starter</artifactId>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
 		</dependency>
 	</dependencies>
 
