--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 		<spring-cloud.version>2020.0.0</spring-cloud.version>
 		<spring-cloud-alibaba.version>2.2.3.RELEASE</spring-cloud-alibaba.version>
 		<spring-boot-admin.version>2.3.0</spring-boot-admin.version>
+		<springdoc.version>1.5.2</springdoc.version>
 		<oauth2-version>2.5.0.RELEASE</oauth2-version>
 		<redisson.version>3.13.6</redisson.version>
 		<cas-client.version>3.5.1</cas-client.version>
@@ -47,7 +48,6 @@
 		<commons-collections.version>4.4</commons-collections.version>
 		<commons-io.version>2.8.0</commons-io.version>
 		<spring-boot-druid.version>1.1.22</spring-boot-druid.version>
-		<swagger.version>3.0.0</swagger.version>
 		<mybatis.version>3.4.6</mybatis.version>
 		<pagehelper.version>1.2.10</pagehelper.version>
 		<tk.mybatis.version>2.1.5</tk.mybatis.version>
@@ -180,9 +180,14 @@
 				<version>${redisson.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-boot-starter</artifactId>
-				<version>${swagger.version}</version>
+				<groupId>org.springdoc</groupId>
+				<artifactId>springdoc-openapi-ui</artifactId>
+				<version>${springdoc.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springdoc</groupId>
+				<artifactId>springdoc-openapi-webmvc-core</artifactId>
+				<version>${springdoc.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mybatis</groupId>
