--- a/scmp-cloud-stock-exec/src/main/resources/bootstrap.yml
+++ b/scmp-cloud-stock-exec/src/main/resources/bootstrap.yml
@@ -1,34 +1,16 @@
 server:
-  port: 7086
-eureka:
-  instance:
-    preferIpAddress: true
-    leaseRenewalIntervalInSeconds: 10
-    leaseExpirationDurationInSeconds: 30
-    metadata-map:
-      VERSION: v1
-  client:
-    serviceUrl:
-      defaultZone: http://macula:macula2019@10.87.132.22:31678/eureka
-    registryFetchIntervalSeconds: 10
+  port: 7082
 spring:
   application:
     name: scmp-cloud-stock-exec
   cloud:
-    config:
-      enabled: false
-feign:
-  client:
-    config:
-      default:
-        connectTimeout: 10000
-        readTimeout: 60000
+    nacos:      server-addr: localhost:8848
 management:
   endpoint:
     health:
       show-details: ALWAYS
   server:
-    port: 9086
+    port: 9082
   endpoints:
     web:
       exposure:
@@ -37,6 +19,4 @@ logging:
   pattern:
     file: '%d %file:%line %p - %m%n'
     console: '%d %file:%line %p - %m%n'
-buildrun:
-  data:
-    path: /data
+  level:    ROOT: INFO
