--- a/scmp-cloud-stock-exec/src/main/resources/application.yml
+++ b/scmp-cloud-stock-exec/src/main/resources/application.yml
@@ -1,33 +1,8 @@
+macula:
+  cloud:
+    stock:
+      chrome-location: "D:\\chromedriver.exe"
 spring:
-  datasource:
-    url: jdbc:mysql://localhost/scmp-stock?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=CTT
-    username: root
-    password: macula@^cloud$
-  jpa:
-    show-sql: false
-    open-in-view: false
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-    database: MYSQL
-    hibernate:
-      ddl-auto: update
-  redis:
-    host: localhost
-    port: 6379
-    password: macula@^cloud$
-    database: 1
   web:
     resources:
       static-locations: classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:/dist
-  cloud:
-    stream:
-      rocketmq:
-        binder:
-          name-server: localhost:9876
-      default-binder: rocketmq
-      bindings:
-        stock-input:
-          group: scmp-cloud-stock-exec
-          destination: scmp-cloud-stock-topic
-          content-type: application/json
-          consumer:
-            concurrency: 20
