[IMP] add Wxcp send message

--- a/scmp-cloud-stock-admin/pom.xml
+++ b/scmp-cloud-stock-admin/pom.xml
@@ -19,6 +19,10 @@
 			<artifactId>scmp-cloud-stock-common</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid-spring-boot-starter</artifactId>
 		</dependency>
@@ -72,10 +76,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
 		</dependency>
 	</dependencies>
 
