--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.1</version>
+		<version>2.4.2</version>
 	</parent>
 
 	<groupId>scmp-cloud</groupId>
@@ -39,7 +39,7 @@
 		<spring-cloud.version>2020.0.0</spring-cloud.version>
 		<spring-cloud-alibaba.version>2.2.3.RELEASE</spring-cloud-alibaba.version>
 		<spring-boot-admin.version>2.3.0</spring-boot-admin.version>
-		<springdoc.version>1.5.2</springdoc.version>
+		<springfox.version>3.0.0</springfox.version>
 		<oauth2-version>2.5.0.RELEASE</oauth2-version>
 		<redisson.version>3.13.6</redisson.version>
 		<cas-client.version>3.5.1</cas-client.version>
@@ -183,6 +183,11 @@
 				<groupId>org.springdoc</groupId>
 				<artifactId>springdoc-openapi-ui</artifactId>
 				<version>${springdoc.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-boot-starter</artifactId>
+				<version>${springfox.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springdoc</groupId>
