--- a/scmp-cloud-stock-admin/src/main/resources/bootstrap.yml
+++ b/scmp-cloud-stock-admin/src/main/resources/bootstrap.yml
@@ -1,30 +1,18 @@
+server:
+  port: 7083
 spring:
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    druid:
-      initial-size: 0
-      max-active: 100
-      min-idle: 0
-      time-between-eviction-runs-millis: 60000
-      time-between-connect-error-millis: 500
-      min-evictable-idle-time-millis: 1800000
-      max-evictable-idle-time-millis: 25200000
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-  mvc:
-    static-path-pattern: /**
-  resources:
-    static-locations: classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:/dist
+  application:
+    name: scmp-cloud-stock-admin
   cloud:
-    config:
-      enabled: false
+    nacos:
+      server-addr: localhost:8848    sentinel:      transport:        dashboard: localhost:9080
+        
 management:
   endpoint:
     health:
       show-details: ALWAYS
+  server:
+    port: 9083
   endpoints:
     web:
       exposure:
@@ -35,36 +23,7 @@ logging:
     console: '%d %file:%line %p - %m%n'
   level:
     ROOT: INFO
-hystrix:
-  command:
-    default:
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 30000
-ribbon:
-  ReadTimeout: 15000
-  ConnectTimeout: 15000
-buildrun:
-  data:
-    path: /data
-choerodon:
-  saga:
-    consumer:
-      enabled: true # 启动消费端
-  schedule:
-    consumer:
-      enabled: true
-      thread-num: 5
-      poll-interval-ms: 1000
-  resource:
-    jwt:
-      ignore: /public/**, /favicon.ico
-macula:
-  cloud:
-    security:
-      oauth2_login: true
-      jwt-key: choerodon
+    
 jasypt:
   encryptor:
     password: macula@^cloud$
