[IMP] test mysql

--- a/scmp-cloud-stock-benchmark/pom.xml
+++ b/scmp-cloud-stock-benchmark/pom.xml
@@ -19,6 +19,10 @@
 			<artifactId>scmp-cloud-stock-common</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
